# danielmiessler--fabric

./: .gitignore  Cargo.toml  version.go
patterns/suggest_pattern/: user.md
patterns/summarize_toml/: system.md
src/: error.rs  main.rs
src/client/: mod.rs
src/client/cli/: fabric.rs  helper.rs  mod.rs  save.rs  ts.rs  utils.rs  yt.rs
src/server/: api.rs  mod.rs  webui.rs
