[package]
name = "fabric"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
serde = { version = "^1.0", features = [ "derive", "default", "alloc" ] }
serde_json = "^1.0"
serde_utils = "^0.6"
serde-transcode = "^1.1"
tokio = { version = "^1.38", features = [ "full", "macros", "rt" ] }
ureq = { version = "2.2.0", features = ["json"] }
url = "^2.5"
